# RBC2026

./: CMakeLists.txt  README.md  package.xml
launch/: simple.launch.py
launch/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
launch/log/: latest_build
logging/: data_logger.py  odom_data.csv
src/car_test/: package.xml  setup.cfg  setup.py
src/car_test/launch/: display.launch.py
src/car_test/urdf/: my_car.urdf
tuto_package/: CMakeLists.txt  CMakeLists.txt.bak  package.xml  setup.cfg  setup.py
tuto_package/launch/: tuto.launch.py
tuto_package/scripts/: data_logger.py  robot_log.csv
tuto_package/tuto_package/: data_logger.py  detector_node.py  lidar_projection_node.py  odom_tf_broadcaster.py
tuto_package/urdf/: tuto_half_home.urdf  tuto_half_soccer.urdf  tuto_robot.urdf
tuto_package/worlds/: calibration_world.world  home.world  soccer.world  tuto.world
urdf/: robot.urdf
worlds/: simple.world
